// Copyright (c) .NET Foundation. All rights reserved.
// Licensed under the Apache License, Version 2.0. See License.txt in the project root for license information.

syntax = "proto3";

import "google/api/annotations.proto";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/greeter/{name_peka}"
    };
  }
  rpc SayHelloFrom (HelloRequestFrom) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/greeter"
      body: "*"
    };
  }
}

message HelloRequest {
  string name_peka = 1 [json_name="name_peka"];
}

message HelloRequestFrom {
  string name_at = 1 [json_name="name_at"];
  string from_test = 2 [json_name="from_test"];
  string additional_variable = 3 [json_name="additional_variable"];
}

message HelloReply {
  string message_no = 1 [json_name="message_no"];
}
